--- a/deploy/roles/python/tasks/main.yml
+++ b/deploy/roles/python/tasks/main.yml
@@ -1,5 +1,9 @@
 # main.yml - Install Python 2.7, either from a repo or a built RPM
 ---
+- name: DEBUG!
+  debug:
+    var: custom_repo
+
 - name: Install Python27 from repo
   yum:
     name: python27
