--- a/deploy/deploy_gocd.yml
+++ b/deploy/deploy_gocd.yml
@@ -15,22 +15,23 @@
   serial: 1
   max_fail_percentage: 10
   roles:
-    - common
+    # - common
     - devtools
-    - {role: puppet_disable, when: "disable_puppet"}
-    - {role: iptables, when: "iptables_config"}
-    - gocd
-    # - pentaho Per Tim 11.18.19 -- Pentaho not used.
-    #- {role: python, when: "custom_repo"}
-    #- {role: python-build, when: "not custom_repo"}
-    - python36-scl
-    - python-libs
-    - odbc
-    - {role: ruby, when: "install_ruby"}
-    - sqitch
-    - nodejs
-    - maven
-	- tesseract
+    - devtools7
+    # - {role: puppet_disable, when: "disable_puppet"}
+    # - {role: iptables, when: "iptables_config"}
+    # - gocd
+    # # - pentaho Per Tim 11.18.19 -- Pentaho not used.
+    # #- {role: python, when: "custom_repo"}
+    # #- {role: python-build, when: "not custom_repo"}
+    # - python36-scl
+    # - python-libs
+    # - odbc
+    # - {role: ruby, when: "install_ruby"}
+    # - sqitch
+    # - nodejs
+    # - maven
+    - tesseract
     #- julia
 
 - hosts: ci_agent
