--- a/deploy/roles/tesseract/tasks/main.yaml
+++ b/deploy/roles/tesseract/tasks/main.yaml
@@ -1,55 +1,99 @@
---
+# Installs tesseract
+---
+- name: Install dependencies
+  yum:
+    name: "{{ item }}"
+    state: present
+  with_items:
+    - "@Development Tools"
+    - libpng-devel
+    - libtiff-devel
+    - libjpeg-devel
+    - devtoolset-7-gcc-c++
+
 - name: Get autoconf
   get_url:
-	url: http://ftp.gnu.org/gnu/autoconf/autoconf-2.69.tar.gz
-	dest: /tmp
+    url: http://ftp.gnu.org/gnu/autoconf/autoconf-2.69.tar.gz
+    dest: /tmp
 
 - name: Extract autoconf
   unarchive:
-	src: /tmp/autoconf-2.69.tar.gz
-	dest: /tmp
-	copy: no
+    copy: no
+    src: /tmp/autoconf-2.69.tar.gz
+    dest: /tmp
+    creates: /tmp/autconf-2.69/
 
-- name: Build autoconf
-  shell: ./tmp/autoconf-2.69/configure
+- name: autoconf - Build and install
+  shell: "{{ item }}"
+  args:
+    chdir: /tmp/autoconf-2.69/
+  with_items:
+    - ./configure --prefix=/usr/
+    - make
+    - make install
 
-- name: Install autoconf
-  community.general.make:
-	chdir: /tmp/autoconf-2.69
-	target: install
-  become: yes
-
-- name: Get Leptonica
+- name: Get autoconf-archive
   get_url:
-	url: http://leptonica.org/source/leptonica-1.77.0.tar.gz
-	dest: /tmp
+    url: http://ftpmirror.gnu.org/autoconf-archive/autoconf-archive-2019.01.06.tar.xz
+    dest: /tmp
+
+- name: Extract autoconf-archive
+  unarchive:
+    copy: no
+    src: /tmp/autoconf-archive-2019.01.06.tar.xz
+    dest: /tmp
+    creates: /tmp/autoconf-archive-2019.01.06/
+
+- name: autoconf-archive - Build and install
+  shell: "{{ item }}"
+  args:
+    chdir: /tmp/autoconf-archive-2019.01.06/
+  with_items:
+    - ./configure --prefix=/usr/
+    - make
+    - make install
+
+- name: Download Leptonica
+  get_url:
+    url: http://leptonica.org/source/leptonica-1.77.0.tar.gz
+    dest: /tmp
 
 - name: Extract Leptonica
   unarchive:
-	src: /tmp/leptonica-1.77.0.tar.gz
-	dest: /tmp
-	copy: no
+    copy: no
+    src: /tmp/leptonica-1.77.0.tar.gz
+    dest: /tmp
+    creates: /tmp/leptonica-1.77.0/
 
-- name: Buld Leptonica
-  shell: ./tmp/leptonica-1.77.0/configure --prefix=/usr/local
+- name: Leptonica - Build and install # need to enable devtools7
+  shell: "{{ item }}"
+  args:
+    chdir: /tmp/leptonica-1.77.0/
+  with_items:
+    - ./configure --prefix=/usr/local/
+    - make
+    - make install
 
-- name: Install Leptonica
-  community.general.make:
-	chdir: /tmp/leptonica-1.77.0
-	target: install
-  become: yes
-
-- name: Install Tesseract
+- name: Download Tesseract
   get_url:
-	url: https://github.com/tesseract-ocr/tesseract/archive/4.0.0.tar.gz -O tesseract-4.0.0.tar.gz
-	dest: /tmp
-
+    url: https://github.com/tesseract-ocr/tesseract/archive/4.0.0.tar.gz
+    dest: /tmp
+    
 - name: Extract Tesseract
   unarchive:
-	src: /tmp/tesseract-4.0.0.tar.gz
-	dest: /tmp
-	copy: no
+    copy: no
+    src: /tmp/tesseract-4.0.0.tar.gz
+    dest: /tmp
+    creates: /tmp/tesseract-4.0.0/
 
-# Autoconf
-# Config
-# Install
+- name: Tesseract - Build and install # need to enable devtools7
+  shell: "{{ item }}"
+  args:
+    chdir: /tmp/tesseract-4.0.0/
+  with_items:
+    - source /opt/rh/devtoolset-6/enable
+    - export PKG_CONFIG_PATH=/usr/local/lib/pkgconfig
+    - ./autogen.sh
+    - ./configure --prefix=/usr/local --with-extra-libraries=/usr/local/lib
+    - make
+    - make install
